--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "chat.tools.terminal.autoApprove": {
     "npx next": true,
     "mkdir": true,
-    "mv": true
+    "mv": true,
+    "npx shadcn@latest": true
   }
 }
